Header redesign + auto-approve hosts

--- a/env.example
+++ b/env.example
@@ -9,3 +9,8 @@ VITE_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
 VITE_CLOUDINARY_CLOUD_NAME="YOUR_CLOUD_NAME"
 VITE_CLOUDINARY_UPLOAD_PRESET="YOUR_UNSIGNED_UPLOAD_PRESET"
 
+## Server-side (Vercel Functions)
+# Used by the AI Trip Advisor (/api/ai-trip-advisor). Set these ONLY in Vercel env vars (not in client).
+OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
+SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
+SUPABASE_SERVICE_ROLE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY"
