Checkout: add DPO Pay (Rwanda) payment flow

--- a/env.example
+++ b/env.example
@@ -14,3 +14,15 @@ VITE_CLOUDINARY_UPLOAD_PRESET="YOUR_UNSIGNED_UPLOAD_PRESET"
 OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
 SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
 SUPABASE_SERVICE_ROLE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY"
+
+## Payments (Vercel Functions) — DPO Pay (Rwanda)
+# You get these from DPO Pay onboarding / dashboard.
+# DPO_COMPANY_TOKEN: your company token
+# DPO_SERVICE_TYPE: numeric service type provided by DPO for your integration
+# Optional overrides if your DPO endpoint differs:
+# DPO_API_URL: defaults to https://secure.3gdirectpay.com/API/v6/
+# DPO_PAY_URL: defaults to https://secure.3gdirectpay.com/payv2.php
+DPO_COMPANY_TOKEN="YOUR_DPO_COMPANY_TOKEN"
+DPO_SERVICE_TYPE="YOUR_DPO_SERVICE_TYPE"
+DPO_API_URL="https://secure.3gdirectpay.com/API/v6/"
+DPO_PAY_URL="https://secure.3gdirectpay.com/payv2.php"
