Add PawaPay CLI and currency verification tools
- Created pawapay-cli.mjs for command-line payment testing
  * Commands: test, create, status, list
  * Supports MTN MoMo and Airtel Money
  * Auto-saves transactions to database

- Created verify-currencies.mjs for currency auditing
  * Checks bookings vs source listings
  * Verifies payment transactions
  * Reports currency mismatches

- Created show-booking-currencies.mjs for detailed booking inspection

- Added npm scripts for easy access:
  * npm run pawapay -- <command>
  * npm run verify:currencies
  * npm run check:bookings

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "supabase:start": "supabase start",
     "supabase:stop": "supabase stop",
     "supabase:link": "supabase link",
-    "supabase:db:pull": "supabase db pull"
+    "supabase:db:pull": "supabase db pull",
+    "pawapay": "node pawapay-cli.mjs",
+    "verify:currencies": "node verify-currencies.mjs",
+    "check:bookings": "node show-booking-currencies.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
