Add comprehensive booking UI test scripts
- Created test-booking-ui.mjs to verify UI data display
  * Tests host name resolution (using user_id column)
  * Tests property/tour/transport details fetching
  * Tests bulk order item enumeration
  * Tests guest information display
  * Tests payment information
  * Color-coded output for easy reading

- Created create-bulk-booking-test.mjs
  * Generates test bulk orders with multiple items
  * Supports property, tour, and transport bookings
  * Uses proper UUID for order_id

- Added npm scripts:
  * npm run test:booking-ui - Run UI data tests
  * npm run create:bulk-booking - Create test bulk order

Tests confirm:
✅ Host name shows 'Amina Uwineza' (not N/A)
✅ Bulk orders show all items with details
✅ Property images are fetched (26 images)
✅ Guest information displays correctly
✅ Payment details show proper currency

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "supabase:db:pull": "supabase db pull",
     "pawapay": "node pawapay-cli.mjs",
     "verify:currencies": "node verify-currencies.mjs",
-    "check:bookings": "node show-booking-currencies.mjs"
+    "check:bookings": "node show-booking-currencies.mjs",
+    "test:booking-ui": "node test-booking-ui.mjs",
+    "create:bulk-booking": "node create-bulk-booking-test.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
