--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/((?!assets/).*)", "destination": "/index.html" }
+  ],
+  "crons": [
+    {
+      "path": "/api/send-review-emails",
+      "schedule": "0 10 * * *"
+    }
   ]
 }
 
