Consolidate review APIs into single endpoint, archive unused DPO endpoints
- Merge submit-review, review-email, send-review-emails into api/review.js
- Route via ?action= query param (submit-review, send-email, send-emails)
- Archive dpo-callback.js and dpo-create-payment.js (unused)
- 11 serverless functions (within Hobby plan limit of 12)

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "crons": [
     {
-      "path": "/api/send-review-emails",
+      "path": "/api/review?action=send-emails",
       "schedule": "0 10 * * *"
     }
   ]
