--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "path": "/api/review?action=send-emails",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/hotel-calendar-sync?action=sync-all",
+      "schedule": "*/30 * * * *"
     }
   ]
 }
