--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test:booking-ui": "node test-booking-ui.mjs",
     "create:bulk-booking": "node create-bulk-booking-test.mjs",
     "seo:audit": "node scripts/seo-index-audit.mjs",
-    "migrate:cloudinary": "node scripts/migrate-cloudinary-assets.mjs"
+    "migrate:cloudinary": "node scripts/migrate-cloudinary-assets.mjs",
+    "audit:media-migration": "node scripts/audit-media-migration.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
