--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview",
     "test:db": "node test-database-connection.mjs",
     "test:e2e": "playwright test",
+    "test:smoke:runtime": "playwright test tests/e2e/runtime-smoke.spec.ts",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test": "npm run test:db && npm run test:e2e",
